# msxpi-pico-playground

./: .gitignore  CMakeLists.txt  README.md
io_capture/: CMakeLists.txt  README.md
io_capture/src/: io_capture.pio  main.c
msx_bus_logger/: CMakeLists.txt  README.md
msx_bus_logger/src/: main.c  msx_bus_logger.pio  msx_bus_logger_mem.pio  msx_rd_logger.pio
msx_bus_logger/tools/: msx_logger.py
